--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <version>2.0.0</version>
   </parent>
   <description>H-TEP Hydrological Modelling Application - EO data pre-processing</description>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <properties>
     <summary>H-TEP Hydrological Modelling Thematic Application - EO data pre-processing</summary>
     <description>H-TEP Hydrological Modelling Thematic Application - EO data pre-processing</description>
@@ -19,19 +19,19 @@
     <yumRepo>hydrology-tep</yumRepo>
   </properties>
   <scm>
-     <connection>scm:git:ssh://git@github.com/hydrology-tep/hypeapps-eodata</connection>
+    <connection>scm:git:ssh://git@github.com/hydrology-tep/hypeapps-eodata</connection>
     <developerConnection>scm:git:ssh://git@github.com/hydrology-tep/hypeapps-eodata</developerConnection>
-    <url>https://github.com/hydrology-tep/hypeapps-eodata</url>   
+    <url>https://github.com/hydrology-tep/hypeapps-eodata</url>
     <tag>HEAD</tag>
   </scm>
   <profiles>
     <profile>
       <id>package-app</id>
       <activation>
-         <property>
-           <name>env</name>
-           <value>ci</value>
-         </property>
+        <property>
+          <name>env</name>
+          <value>ci</value>
+        </property>
       </activation>
       <build>
         <plugins>
