--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.terradue</groupId>
     <artifactId>dcs-R-parent</artifactId>
-    <version>2.0.0</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <description>H-TEP Hydrological Modelling Application - EO data pre-processing</description>
   <version>1.1</version>
